<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Home"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Home"
    tools:context=".MenuActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="46sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_background_plain">

        <TextView
            android:id="@+id/menu_modulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/modulo_operation"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/modulo_info_icon"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modulo_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/info_text_background"
            android:text="@string/modulo_info_txt"
            android:textColor="@color/text_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_modulo" />

        <ImageView
            android:id="@+id/modulo_info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_background_plain">

        <TextView
            android:id="@+id/menu_hcf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/hcf_and_lcm"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/hcf_info_icon"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hcf_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/info_text_background"
            android:text="@string/hcf_info_text"
            android:textColor="@color/text_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_hcf" />

        <ImageView
            android:id="@+id/hcf_info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_pc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_background_plain">

        <TextView
            android:id="@+id/menu_prime_checker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/prime_checker"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/prime_checker_info_icon"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prime_checker_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/info_text_background"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_color"
            android:text="@string/prime_checker_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/menu_prime_checker" />

        <ImageView
            android:id="@+id/prime_checker_info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_pf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_background_plain">

        <TextView
            android:id="@+id/menu_prime_factors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/prime_factors"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/prime_factors_info_icon"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prime_factors_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/info_text_background"
            android:text="@string/prime_factors_info_txt"
            android:textColor="@color/text_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_prime_factors" />

        <ImageView
            android:id="@+id/prime_factors_info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_background_plain">

        <TextView
            android:id="@+id/menu_prime_generator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/prime_generator"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@+id/prime_generator_info_icon"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prime_generator_info_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/info_text_background"
            android:text="@string/prime_generator_info_txt"
            android:textColor="@color/text_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_prime_generator" />

        <ImageView
            android:id="@+id/prime_generator_info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/info_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
</ScrollView>